--- a/follow-cursor.html
+++ b/follow-cursor.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="et">
 <head>
   <meta charset="UTF-8">
-  <title>cursor follow</title>
-  <link rel="stylesheet" href="/style.css">
-  <link rel="stylesheet" href="/css/follow-cursor.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kursori Jälgija - 1466</title>
+  <meta name="description" content="Interaktiivne kursori jälgimise efekt - 1466 digitaalne kogemus">
+  <link rel="stylesheet" href="css/pages.css">
   <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
-  <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
-  <script src="/js/follow-cursor.js"></script>
 </head>
 
-<body>
-  <!-- partial:index.partial.html -->
-  <div class="cursor-track">
-    <p class="txt">1466</p>
-    <p id="demo"></p>
+<body class="cursor-page">
+  <div class="cursor-tracker">
+    <p class="main-text">1466</p>
+    <p class="demo-text"></p>
   </div>
-  <canvas></canvas>
+  <canvas class="particle-canvas"></canvas>
 
-  <a id="yt-link" class="meta-link" 
-  href="kv-reserviloendur.html" target="_blank">
-    <i class="fa-brands fa-youtube"></i>
+  <a class="meta-link menu-link" href="index.html">
     <span>menüü</span>
   </a>
 
+  <script src="js/follow-cursor.js"></script>
 </body>
 </html>
