--- a/lamp.html
+++ b/lamp.html
@@ -1,45 +1,30 @@
 <!DOCTYPE html>
-<html lang="en" >
-
+<html lang="et">
 <head>
-    <style>
-        body {
-            background-color: antiquewhite;
-            font-style: italic;
-            color: blueviolet;
-        }
-        .grid-container {
-  display: grid;
-  grid-template-columns: auto auto auto auto;
-  padding: 10px;
-}
-.grid-item {
-  padding: 20px;
-  font-size: 8rem;
-  text-align: center;
-}
-h1 {font-size: 3rem;}
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lamp - 1466</title>
+    <meta name="description" content="Interaktiivne lambi kogemus - 1466 digitaalne portfoolio">
+    <link rel="stylesheet" href="css/pages.css">
 </head>
 
-<body>
-    <!-- T E K S T -->
+<body class="lamp-page">
     <center>
         <br>
         <h1>test test</h1>
         <p>get rekt</p>
     </center>
     <center>
-        <div class="grid-container" style="width: 600px;">
+        <div class="grid-container">
             <div class="grid-item">L</div>
             <div class="grid-item">A</div>
-            <div class="grid-item"><img src="/images/pixar-lamp.png" alt="M" style="height:120px; transform: translateY(15px);;"></div>
+            <div class="grid-item"><img src="images/pixar-lamp.png" alt="Pixar lamp logo"></div>
             <div class="grid-item">P</div> 
         </div>
     </center>
 
-    <!-- L I N K -->
-    <script scr="funny.js"></script>
+    <a href="index.html" class="meta-link" style="position: fixed; bottom: 20px; right: 20px;">
+        <span>menüü</span>
+    </a>
 </body>
-
 </html>
