--- a/under-construction.html
+++ b/under-construction.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="et">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ehitamisel - 1466</title>
+    <meta name="description" content="Leht on hetkel ehitamisel - 1466">
+    <link rel="stylesheet" href="css/main.css">
     <style>
-        html {background: #f7fbff top/cover no-repeat url("/images/hinnov.jpg");}
+        html {
+            background: #f7fbff top/cover no-repeat url("images/hinnov.jpg");
+        }
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
     </style>
 </head>
 <body>
-    <div style="text-align: center;"> 
-        <img src="/images/under-construction.gif" alt="">
+    <div> 
+        <img src="images/under-construction.gif" alt="Ehitamisel - leht on hetkel väljaarendamisel">
     </div>
 </body>
 </html>
