--- a/welcome-test.html
+++ b/welcome-test.html
@@ -1,49 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">  
+<html lang="et">  
 <head>
-  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
-  <title>1466 to html</title>
-  <link rel="stylesheet" href="/css/welcome.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Teretulemast - 1466</title>
+  <meta name="description" content="Teretulemast 1466 digitaalsesse kogemusse">
+  <link rel="stylesheet" href="css/pages.css">
   <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
 </head>
-<style>
-
-</style>
-
-<body>
-<a class="hidden-button" href="secondpage.html">Touch me if U dare</a>
-<div id="contianer">
-  <aside id="divaside">
-    <div id="asidebox">
-      <p id="pealkiri" class="flex">1466</p>
-    </div>
-
-  </aside>
+<body class="welcome-page">
+  <div class="welcome-container">
+    <h1 class="welcome-title">1466</h1>
     
-  <section id="divtop">
-    <div id="topbox">
-      <article id="toptitle">Mis asi on 1466?</article>
-      <article id="maintext">Mul hakkas kunstiajaloo tunnis igav niiet ma tegin uhe loogilise liigutuse ja ostsin GoDaddyst domeeni. 1466 On refrence uhele nublu laulule</article>
+    <div class="welcome-message">
+      <h2>Mis asi on 1466?</h2>
+      <p>Mul hakkas kunstiajaloo tunnis igav niiet ma tegin ühe loogilise liigutuse ja ostsin GoDaddyst domeeni. 1466 on reference ühele nublu laulule</p>
+      <h3>OMG hakka tööle</h3>
+      <p>Kiire update, see sitt ikka veel ei tööööötaaaaa 🖕</p>
     </div>
-  </section>
-
-  <section id="divbottom">
-    <div id="bottombox">
-      <article id="bottomtitle">OMG pede hakka toole</article>
-      <article id="maintextAll">Kiire update, see sitt ikka veel ei töööötaaaaa 🖕</article>
+    
+    <div style="margin-top: var(--spacing-xl);">
+      <a href="index.html" class="meta-link">
+        <span>tagasi menüüsse</span>
+      </a>
     </div>
-  </section>
-
-<!-- see link -->
-<a id="yt-link" class="meta-link" href="C:\Users\Arvuti\Pictures\1466 website\rulettewheel\rulette.html" target="_blank">
-  <i class="fa-brands fa-youtube"></i>
-  <span>2 min tutorial</span>
-</a>
-
-
-</div>
-
+  </div>
 </body>
-
 </html>
