animatsioonid ja background
index lehe animatsioonid ja meedia lehe background (ja veits ka grid layout changes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <main class="index-main">
     <section class="file-list">
-      <h2>peamised projektid</h2>
+      <h2 id="main-projects-title">peamised projektid</h2>
       <div class="file-grid main-projects">
         <div class="file-card">
           <h3 class="file-name">empire-rulett</h3>
@@ -51,17 +51,17 @@
 
   <footer class="index-footer">
     <div class="footer-links">
+      <a href="lamp.html" class="footer-link meta-link">
+        <span data-value="lamp">lamp</span>
+      </a>
+      <a href="welcome-test.html" class="footer-link meta-link">
+        <span data-value="welcome-test">welcome-test</span>
+      </a>
       <a href="follow-cursor.html" class="footer-link meta-link">
         <span data-value="follow-cursor">follow-cursor</span>
       </a>
       <a href="kv-reserviloendur.html" class="footer-link meta-link">
         <span data-value="kv-reserviloendur">kv-reserviloendur</span>
-      </a>
-      <a href="welcome-test.html" class="footer-link meta-link">
-        <span data-value="welcome-test">welcome-test</span>
-      </a>
-      <a href="lamp.html" class="footer-link meta-link">
-        <span data-value="lamp">lamp</span>
       </a>
     </div>
   </footer>
