--- a/meedia.html
+++ b/meedia.html
@@ -27,17 +27,17 @@
         </header>
         
         <section class="video-grid" id="videoContainer">
-            <!-- SOOME1 Video with Vimeo embed -->
-            <div class="video-card" data-date="2024-01-15" data-title="lil mäll x lil allar - SOOME1">
+            <!-- PIONEERIPATALJONI Video with YouTube embed -->
+            <div class="video-card" data-date="2024-04-15" data-title="Pioneeripataljoni välikindlustamine - aprill 2024">
                 <div class="video-meta">
-                    <span class="video-date">15. jaanuar 2024</span>
-                    <span class="video-platform">Vimeo</span>
+                    <span class="video-date">15. aprill 2024</span>
+                    <span class="video-platform">YouTube</span>
                 </div>
                 <div class="video-embed">
-                    <iframe src="https://player.vimeo.com/video/888468180?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="1920" height="960" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" title="SOOME1"></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/AKp0sugeElk?si=BS0qvymwRdcUdITL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
-                <h3 class="video-subtitle">lil mäll x lil allar - SOOME1</h3>
-                <p class="video-description">TÄNAME: B-roll ja muidu ka muhe seltskond: Aron Kelder (aka motika tüüp), Helen Jakob (aka koerte omnik), Joonas Adami (aka karvane), Marten Käis Soome1 filmimas, Märt Chad Veri, Pauli i ne Ainso, Kerti Kala (roosade juustega)</p>
+                <h3 class="video-subtitle">Pioneeripat. väli-kindlustamine</h3>
+                <p class="video-description">StR 2024<br><br>Edu reservis!!</p>
             </div>
 
             <!-- VOLVOGA KELGUTAMINE Video with YouTube embed -->
@@ -53,18 +53,19 @@
                 <p class="video-description">Kiire kokkuvõte oleks siis, et me otsustasime vastlapäeval autodega kelgutama minna.. <br><br>Aaa jaaa mu GPU reaalselt annab otsad. Premiere pro succkib nii minu kui ka mu arvuti varbaid JA SEE EI OLE MEELDIV. Aitäh vaatamast!</p>
             </div>
 
-            <!-- PIONEERIPATALJONI Video with YouTube embed -->
-            <div class="video-card" data-date="2024-04-15" data-title="Pioneeripataljoni välikindlustamine - aprill 2024">
+            <!-- SoundCloud Track -->
+            <div class="video-card" data-date="2023-07-23" data-title="Issi Lofy - nublu (romantilisem)">
                 <div class="video-meta">
-                    <span class="video-date">15. aprill 2024</span>
-                    <span class="video-platform">YouTube</span>
+                    <span class="video-date">22. juuni 2023</span>
+                    <span class="video-platform">SoundCloud</span>
                 </div>
-                <div class="video-embed">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/AKp0sugeElk?si=BS0qvymwRdcUdITL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div class="video-embed soundcloud-embed">
+                    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/soundcloud%253Atracks%253A1564832398&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+                    <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/alo-lohmus" title="lil_Allar" target="_blank" style="color: #cccccc; text-decoration: none;">lil_Allar</a> · <a href="https://soundcloud.com/alo-lohmus/issi-lofy-nublu" title="Issi Lofy - nublu (natukene romantilisem kui originaal)" target="_blank" style="color: #cccccc; text-decoration: none;">Issi Lofy - nublu (natukene romantilisem kui originaal)</a></div>
                 </div>
-                <h3 class="video-subtitle">Pioneeripataljoni välikindlustamine - aprill 2024</h3>
-                <p class="video-description">StR 2024<br><br>Edu reservis!!</p>
-            </div>
+                <h3 class="video-subtitle">Issi Lofy - nublu</h3>
+                <p class="video-description">lil_Allar uusim remix/singel - Issi romantilisem Lofi versioon!</p>
+            </div> 
 
             <!-- Märdi auto Video with YouTube embed -->
             <div class="video-card" data-date="2022-09-03" data-title="Märdi mobo kiletamine">
@@ -76,21 +77,21 @@
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/y-80CBdSj18?si=_Bv_NwbfbN8B36bD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
                 <h3 class="video-subtitle">Märdi mobo kiletamine</h3>
-                <p class="video-description">Igastahes, mul on kanalil üks strike ja kahe strikega kustutakse see kanal ära. Ma reaalselt palvetan, et ma ei saaks Märdi reaktsooni pärast banni.<br>AItäh kiletajatele!<br>Video valmis tänu meie suursponsorile ALO LILLEPOOD OÜ<br><br>ALOMON prod.<br>Alo Lõhmus ISIKLIKULT!!</p>
+                <p class="video-description">Igastahes, mul on kanalil üks strike ja kahe strikega kustutakse see kanal ära. Ma reaalselt palvetan, et ma ei saaks Märdi reaktsooni pärast banni.<br>AItäh kiletajatele!<br>Video valmis tänu suursponsorile ALO LILLEPOOD OÜ</p>
             </div>
 
-            <!-- SoundCloud Playlist -->
-            <div class="video-card" data-date="2024-09-26" data-title="Mc virgins originals - SoundCloud Playlist">
+            <!-- SOOME1 Video with Vimeo embed -->
+            <div class="video-card" data-date="2021-12-09" data-title="lil mäll x lil allar - SOOME1">
                 <div class="video-meta">
-                    <span class="video-date">26. september 2024</span>
-                    <span class="video-platform">SoundCloud</span>
+                    <span class="video-date">9. detsember 2021</span>
+                    <span class="video-platform">Vimeo</span>
                 </div>
-                <div class="video-embed soundcloud-embed">
-                    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/soundcloud%3Aplaylists%3A1905147563%3Fsecret_token%3Ds-XIphCfEmq5E&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+                <div class="video-embed">
+                    <iframe src="https://player.vimeo.com/video/888468180?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="1920" height="960" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" title="SOOME1"></iframe>
                 </div>
-                <h3 class="video-subtitle">Mc virgins originals - SoundCloud Playlist</h3>
-                <p class="video-description">lil_Allar originaalmuusika kollektsioon SoundCloudis. Kuula meie uusimaid tracke ja jagamatud demosid!</p>
-            </div>    
+                <h3 class="video-subtitle">lil mäll x lil allar - SOOME1</h3>
+                <p class="video-description">TÄNAME: B-roll ja muidu ka muhe seltskond: Aron Kelder (aka motika tüüp), Helen Jakob (aka koerte omnik), Joonas Adami (aka karvane), Marten Käis Soome1 filmimas, Märt Chad Veri, Pauli i ne Ainso, Kerti Kala (roosade juustega)</p>
+            </div>
         </section>
     </div>
 
