meedia page styling

--- a/index.html
+++ b/index.html
@@ -64,6 +64,15 @@
         <span data-value="kv-reserviloendur">kv-reserviloendur</span>
       </a>
     </div>
+
+    <!-- Copyright Footer -->
+    <div class="copyright-footer">
+        <p class="copyright-text">
+            © 2025 <span class="company-name">Alomon OÜ</span> & <span class="company-name">Alo Lileepood OÜ</span> 
+            | All rights reserved | 1466 - Digital Portfolio
+        </p>
+    </div>
+
   </footer>
 
   <script src="js/index.js"></script>
