--- a/meedia.html
+++ b/meedia.html
@@ -95,6 +95,14 @@
         </section>
     </div>
 
+    <!-- Copyright Footer -->
+    <div class="copyright-footer">
+        <p class="copyright-text">
+            © 2025 <span class="company-name">Alomon OÜ</span> & <span class="company-name">Alo Lileepood OÜ</span> 
+            | All rights reserved | 1466 - Digital Portfolio
+        </p>
+    </div>
+
     <script src="js/video-sort.js"></script>
 </body>
 </html>
