Kiiruse parandamine, sortimise eemaldamine

--- a/index.html
+++ b/index.html
@@ -69,12 +69,11 @@
     <div class="copyright-footer">
         <p class="copyright-text">
             © 2025 <span class="company-name">Alomon OÜ</span> & <span class="company-name">Alo Lileepood OÜ</span> 
-            | All rights reserved | 1466 - Digital Portfolio
+            | All rights reserved | 1466 Portfolio
         </p>
     </div>
 
+    <script src="js/index.js"></script>
   </footer>
-
-  <script src="js/index.js"></script>
 </body>
 </html>
