--- a/empire-rulett.html
+++ b/empire-rulett.html
@@ -4,6 +4,14 @@
   <title>Roulette Wheel</title>
   <link rel="stylesheet" href="/css/empire-rulett.css">
   <link rel="stylesheet" href="/js/empire-rulett.js">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y4HCK5KFQ6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-Y4HCK5KFQ6');
+  </script>
 </head>
 <body>
 
