--- a/follow-cursor.html
+++ b/follow-cursor.html
@@ -8,6 +8,14 @@
   <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
   <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
   <script src="/js/follow-cursor.js"></script>
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y4HCK5KFQ6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-Y4HCK5KFQ6');
+  </script>
 </head>
 
 <body>
