--- a/kv-reserviloendur.html
+++ b/kv-reserviloendur.html
@@ -9,6 +9,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=Rubik:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/kv-reserviloendur.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y4HCK5KFQ6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-Y4HCK5KFQ6');
+  </script>
 </head>
 <body>
 
