--- a/lamp.html
+++ b/lamp.html
@@ -20,6 +20,14 @@
 }
 h1 {font-size: 3rem;}
     </style>
+      <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y4HCK5KFQ6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-Y4HCK5KFQ6');
+  </script>
 </head>
 
 <body>
