--- a/update-1466.html
+++ b/update-1466.html
@@ -6,6 +6,14 @@
     <title>1466 to html</title>
     <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>  
     <link rel="stylesheet" href="css/update-1466.css">
+      <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y4HCK5KFQ6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-Y4HCK5KFQ6');
+  </script>
 </head>
 <style>
 </style>
